--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Set up build tools
-      run: sudo apt-get install gcc
+      run: sudo apt-get install -y gcc cppcheck
     - name: Build project
       run: make build
     - name: Run tests
